reset to Gradle 4.10.2 settings